Restarting register at the default state with just adding the code to initialise a profile / adding ressources via resx files with a dynamic selecation of the language depending on the requst cultuer / adding email sender without activation email confirmation

--- a/activities/appsettings.Development.json
+++ b/activities/appsettings.Development.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MailJet": {
+    "ApiKey": "......",
+    "SecretKey": ".....\""
+  },
   "AllowedHosts": "*"
 }
