--- a/activities/appsettings.json
+++ b/activities/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MailJet": {
+    "ApiKey": "......",
+    "SecretKey": ".....\""
+  },
   "AllowedHosts": "*"
 }
