moving last registred to public

--- a/activities/appsettings.json
+++ b/activities/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:zen-33-server.database.windows.net,1433;Initial Catalog=zen-33-database;Persist Security Info=False;User ID=zen-33-server-admin;Password=E46A4T82QT50WF1G$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:activities-srv01.database.windows.net,1433;Initial Catalog=db01; Encrypt=True; TrustServerCertificate=False; Connection Timeout=300; Authentication=Active Directory MSI;",
   },
   "Logging": {
     "LogLevel": {
