--- a/activities/appsettings.Development.json
+++ b/activities/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=activites;Integrated Security=true;Trusted_Connection=true;TrustServerCertificate=true;"
+    //"DefaultConnection": "Data Source=.;Initial Catalog=activites;Integrated Security=true;Trusted_Connection=true;TrustServerCertificate=true;",
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=act2.0;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
